--- a/src/utils/styles.scss
+++ b/src/utils/styles.scss
@@ -1,2 +1,4 @@
 $primary-color : #902bf5;
-$pc-max-width : 1024px
+$pc-max-width : 1024px;
+$background-color : #121212;
+$secondary-color : #1F1B24;
