--- a/src/App.scss
+++ b/src/App.scss
@@ -10,43 +10,95 @@ body{
   margin: 0;
 }
 
+
+.load-image{
+  max-width: $pc-max-width;
+  position: absolute;
+  left: 50%;
+  top : 50%;
+  transform: translate(-50%, -50%);
+
+  .avatar-singleton{
+    width: 200px;
+    height: 200px;
+    border-radius: 50%;
+    background-color: gray;
+    animation: skeleton 0.3s ease infinite;
+  }
+
+  img{
+    width: 200px;
+    height: 200px;
+    border-radius: 50%;
+    object-fit: cover;
+  }
+}
 .content{
   max-width: $pc-max-width;
   margin: auto;
-  .nav-bar{
-    margin-top: 30px;
-    display: flex;
-    gap: 10px;
+ 
+  .nav-info{
+    opacity: 0;
+    animation: skeleton 0.8s ease forwards;
+    animation-delay: 1s;
 
-    .single-link{
-      padding: 20px;
-      border-top-right-radius: 10px;
-      border-top-left-radius: 10px;
-      cursor: pointer;
+      .nav-bar{
+        margin-top: 30px;
+        display: flex;
+        gap: 10px;
+
+        .single-link{
+          width: 110px;
+          height: 60px;
+          display: flex;
+          align-items: center;
+          justify-content: center;
+          border-top-right-radius: 10px;
+          border-top-left-radius: 10px;
+          cursor: pointer;
+          z-index: 500;
+        }
+        .single-link::before{
+          content: '';
+          width: 110px;
+          height: 60px;
+          border-top-right-radius: 10px;
+          border-top-left-radius: 10px;
+          background-color: $secondary-color;
+          position: absolute;
+          transform: translateY(60px);
+          transition: transform 0.3s ease;
+          z-index: -1;
+          opacity: 0;
+
+        }
+        .single-link:hover::before{
+          color: $primary-color;
+          transform: translateY(0px);
+          opacity: 1;
+        }
+        .selected{
+          background-color: #1F1B24;
+          color: $primary-color;
+        }
+      }
+      .information-container{
+        background-color: #1F1B24;
+        height: calc(100vh - 370px);
+        border-radius: 20px;
+        border-top-left-radius: 0px;
+        border-top-right-radius: 0px;
+        overflow: hidden;
+      }
     }
-    .single-link:hover{
-      background-color: #1F1B24;
-      color: $primary-color;
-      animation: comeup 0.3s ease;
-    }
-    .selected{
-      background-color: #1F1B24;
-      color: $primary-color;
-    }
+}
+
+@keyframes skeleton {
+  0%{
+    opacity: 0.5;
   }
-  .information-container{
-    background-color: #1F1B24;
-    height: calc(100vh - 370px);
-    border-radius: 10px;
-    border-top-left-radius: 0px;
+  100%{
+    opacity: 1;
   }
 }
 
-@keyframes comeup {
-  from{
-    transform: translateY(10px);
-  }
-  to{
-    transform: translateY(0);
-  }
-}
