--- a/src/layouts/the-footer/Footer.scss
+++ b/src/layouts/the-footer/Footer.scss
@@ -5,7 +5,7 @@
     display: flex;
     align-items: center;
     justify-content: center;
-   
+    
 
     footer{
         width: 260px;
@@ -15,9 +15,13 @@
         border-radius: 25px;
         display: flex;
         align-items: center;
+        opacity: 0;
         justify-content: space-between;
         background: url('/public/walpapper.jpeg') no-repeat center;
         background-size: cover;
+        animation: animate-footer 0.5s ease-in-out forwards;
+        animation-delay: 2s;
+        
 
 
         .img-container{
@@ -28,7 +32,17 @@
             }
         }
         .img-container:hover{
-            transform: translateY(-7px);
+            transform: translateY(-10px);
         }
+    }
+}
+
+@keyframes animate-footer {
+    from{
+      bottom: -10px;
+    }
+    to{
+      bottom: 20px;
+      opacity: 1;
     }
 }
