--- a/src/layouts/the-header/Header.scss
+++ b/src/layouts/the-header/Header.scss
@@ -28,10 +28,8 @@
             background-color: rgb(255, 255, 255);
             border: 2px solid white;
             cursor: pointer;
-            
-            img{
-                width: 30px;
-            }
+            color: black;
+            font-weight: bold;
         }
         
     }
