--- a/src/layouts/banner/Banner.scss
+++ b/src/layouts/banner/Banner.scss
@@ -16,7 +16,7 @@
                 height: 80px;
                 border-radius: 50%;
                 object-fit: cover;
-                animation: animate-avatar 0.4s ease;
+                animation: animate-avatar 0.4s linear;
             }
         }
 
@@ -80,5 +80,6 @@
     to{
         width: 80px;
         height: 80px;
+
     }
 }
