--- a/src/layouts/the-footer/Footer.scss
+++ b/src/layouts/the-footer/Footer.scss
@@ -31,6 +31,15 @@
                 cursor: pointer;
             }
         }
+        .white-back{
+            background-color: white;
+            width: 50px;
+            height: 50px;
+            border-radius: 8px;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+        }
         .img-container:hover{
             transform: translateY(-10px);
         }
