--- a/src/App.scss
+++ b/src/App.scss
@@ -4,8 +4,12 @@
   font-family: "Ubuntu", sans-serif;
 }
 
+html {
+  scroll-behavior: smooth;
+}
+
 body{
-  background-color: #121212;
+  background-color: black;
   color: white;
   margin: 0;
 }
@@ -13,17 +17,16 @@ body{
 
 .load-image{
   max-width: $pc-max-width;
-  position: absolute;
-  left: 50%;
-  top : 50%;
-  transform: translate(-50%, -50%);
+  margin: auto;
 
   .avatar-singleton{
     width: 200px;
     height: 200px;
     border-radius: 50%;
-    background-color: gray;
+    background-color: rgba($color: $primary-color, $alpha: 0.5);
     animation: skeleton 0.3s ease infinite;
+    transform: translate(calc(100vw/4), calc(100vh/4));
+
   }
 
   img{
@@ -31,6 +34,7 @@ body{
     height: 200px;
     border-radius: 50%;
     object-fit: cover;
+    transform: translate(calc(100vw/4), calc(100vh/4));
   }
 }
 .content{
@@ -70,7 +74,8 @@ body{
           transition: transform 0.3s ease;
           z-index: -1;
           opacity: 0;
-
+          border: 1px solid rgba(128, 128, 128, 0.267);
+          border-bottom: 1px solid $background-color;
         }
         .single-link:hover::before{
           color: $primary-color;
@@ -78,17 +83,25 @@ body{
           opacity: 1;
         }
         .selected{
-          background-color: #1F1B24;
+          background-color: $secondary-color;
+          border: 1px solid rgba(128, 128, 128, 0.267);
+          border-bottom: 1px solid $background-color;
           color: $primary-color;
         }
       }
       .information-container{
-        background-color: #1F1B24;
+        background-color: $secondary-color;
+        border: 1px solid rgba(128, 128, 128, 0.267);
         height: calc(100vh - 370px);
         border-radius: 20px;
         border-top-left-radius: 0px;
         border-top-right-radius: 0px;
         overflow: hidden;
+        margin-top: -1px;
+      }
+
+      .information-container-mobile{
+        display: none;
       }
     }
 }
@@ -99,6 +112,34 @@ body{
   }
   100%{
     opacity: 1;
+  }
+}
+
+@media screen and (max-width : $mobile-breakpoint) {
+  .content{
+      width: 90%;
+
+      .nav-info{
+
+        .nav-bar{
+          display: none;
+        }
+
+        .information-container{
+          display: none;
+        }
+        .information-container-mobile{
+          display: inline;
+
+          .title{
+            margin-top: 50px;
+            margin-bottom: 15px;
+            font-size: 1.5em;
+            font-weight: bold;
+            color: rgba(255, 255, 255, 0.336);
+          }
+        }
+      }
   }
 }
 
