--- a/src/layouts/about-me/AboutMe.scss
+++ b/src/layouts/about-me/AboutMe.scss
@@ -59,8 +59,8 @@
                 width: 30px;
                 height: 300px;
                 transform: rotate(-45deg);
-                background-color: rgba(255, 255, 255, 0.562);
-                box-shadow: 0px 20px 30px rgba(255, 255, 255, 0.623);
+                background-color: rgba(255, 255, 255, 0.24);
+                box-shadow: 0px 20px 30px rgba(255, 255, 255, 0.342);
                 animation: shine-button 3s ease infinite;
             }
             
@@ -96,5 +96,18 @@
     }
     100% {
       transform: rotate(-45deg) translateX(300px);
+    }
+}
+
+
+@media screen and (max-width: $mobile-breakpoint) {
+    .about-me-container .about-me-wrapper{
+        width: 100%;
+        .avatar{
+            display: none;
+        }
+        .bio-container{
+            // text-align: center;
+        }
     }
 }
