--- a/src/layouts/the-header/Header.scss
+++ b/src/layouts/the-header/Header.scss
@@ -3,7 +3,6 @@
 
 .header-container{
     height: 60px;
-    border-bottom: 1px solid rgba(128, 128, 128, 0.171);
 
     header{
         max-width: $pc-max-width;
@@ -19,18 +18,100 @@
             font-family: "Dancing Script", cursive;
         }
         .mode-svg-container{
-            width: 28px;
-            height: 28px;
+            width: 30px;
+            height: 30px;
             display: flex;
             border-radius: 5px;
             align-items: center;
             justify-content: center;
-            background-color: rgb(255, 255, 255);
-            border: 2px solid white;
+            background-color: rgba(255, 255, 255, 0.253);
             cursor: pointer;
-            color: black;
+            color: white;
+            font-size: 0.9em;
             font-weight: bold;
         }
-        
+        .menu-container{
+            display: none;
+        }
+        .nav-menu{
+            display: none;
+        }
+    }
+}
+.no-border{
+    border-bottom: 1px solid rgba(128, 128, 128, 0.171);
+}
+.border-bottom{
+    border-bottom: 1px solid rgba(128, 128, 128, 0.171);
+}
+
+@media screen and (max-width : $mobile-breakpoint) {
+    .header-container{
+        position: fixed;
+        top: 0;
+        left: 0;
+        width: 100vw;
+        background-color: rgba(0, 0, 0, 0.9);
+        z-index: 100;
+        header{
+            width: 90%;
+            margin-top: -5px;
+            .mode-svg-container{
+                display: none;
+            }
+
+            .menu-container{
+                width: 35px;
+                height: 35px;
+                display: flex;
+                border-radius: 50%;
+                align-items: center;
+                justify-content: center;
+                background-color: rgba(255, 255, 255, 0.116);
+                cursor: pointer;
+                color: white;
+                font-size: 0.9em;
+                font-weight: bold;
+
+                img{
+                    width: 20px;
+                }
+            }
+            .nav-menu{
+                display: flex;
+                position: absolute;
+                top: 50px;
+                right: 40px;
+                width: 200px;
+                padding: 15px;
+                border-radius: 5px;
+                background-color: rgb(34, 33, 33);
+                flex-direction: column;
+                gap: 15px;
+                animation: zoom-menu 0.4s ease forwards;
+                .link{
+                    color: rgba(255, 255, 255, 0.63);
+                    text-decoration: none;
+                }
+                .colored{
+                    color: $primary-color;
+                }
+            }
+        }
+
+
+    }
+    .no-border{
+        border: none;
+    }
+}
+
+@keyframes zoom-menu {
+    from{
+        transform: scale(0.3);
+        transform-origin: top right;
+    }
+    to{
+        transform: scale(1);
     }
 }
