--- a/src/components/single-project/SingleProject.scss
+++ b/src/components/single-project/SingleProject.scss
@@ -26,7 +26,7 @@
                 }
             }
 
-            .title{
+            .project-title{
                 font-weight: bold;
             }
         }
@@ -51,9 +51,34 @@
     }
     .demo-section{
         width: 65%;
-        
+        border: 2px solid rgba(128, 128, 128, 0.61);
+        padding: 10px;
+        height: 300px;
+        border-radius: 20px;
+        overflow: hidden;
+
         img{
             width: 100%;
+            height: 100%;
+            object-fit: cover !important;
+        }
+    }
+}
+
+@media screen and (max-width:$mobile-breakpoint) {
+    .single-project-container{
+        flex-direction: column-reverse;
+        gap: 60px;
+        .info-section{
+            width: 100%;
+
+            .visit{
+                width: 90%;
+            }
+        }
+        .demo-section{
+            width: 100%;
+            height: 200px;
         }
     }
 }
