--- a/src/layouts/Education/Education.scss
+++ b/src/layouts/Education/Education.scss
@@ -53,17 +53,17 @@
     
             }
             .single-uni:hover{
-                background-color: $background-color;
+                background-color: rgba(255, 255, 255, 0.089);
             }
     
             .selected{
-                background-color: $background-color;
+                background-color: rgba(255, 255, 255, 0.089);
             }
         }
     
         .details-section{
             width: 50%;
-            background-color: $background-color;
+            background-color: rgba(255, 255, 255, 0.089);
             padding: 20px;
             border-radius: 10px;
             border-top-left-radius: 0;
@@ -73,6 +73,9 @@
             .content{
                 animation: slide-up 0.5s forwards;
 
+                .uni-fac{
+                    display: none;
+                }
                 .local{
                     font-size: 1.4em;
                 }
@@ -116,3 +119,42 @@
     }
   }
 
+
+  @media screen and (max-width:$mobile-breakpoint) {
+    .education-container .education-wrapper {
+        width: 100%;
+
+        .uni-section .single-uni {
+            .logo-container{
+                width: 40px;
+                height: 40px;
+            }
+            .information{
+                display: none;
+
+            }
+        }
+        .details-section{
+            width: 80%;
+
+            .content{
+
+                .local{
+                    font-size: 1em;
+                }
+                .uni-fac{
+                    margin-bottom: 10px;
+                    display: block;
+                    .name{
+                        font-size: 1.4em;
+                    }
+                    .fac{
+                        font-size: 0.9em;
+                        color: gray;
+                        margin-top: 5px;
+                    }
+                }
+            }
+        }
+    }
+  }
