--- a/src/layouts/projects/Project.scss
+++ b/src/layouts/projects/Project.scss
@@ -28,18 +28,20 @@
             animation: slide-rigth 0.3s  linear;
         }
 
-        .nav{
+        .swap-rigth-icon, .swap-left-icon{
             min-width: 70px;
             .nav-svg{
                 width: 60px;
                 cursor: pointer;
                 transition: transform 0.4s ease;
+                opacity: 0.5;
             }
     
             .next{
                 transform: rotate(180deg);
             }
         }
+ 
 
     }
     
@@ -76,5 +78,47 @@
     100% {
       transform: scale(0);
       opacity: 0; 
+    }
+  }
+
+  @media screen and (max-width:$mobile-breakpoint) {
+    .projet-container .projet-wrapper{
+      gap: 15px;
+      width: 100%;
+
+      .project{
+        width: 98% !important;
+        overflow: hidden;
+      }
+
+      .round-box{
+        background-color: rgba(128, 128, 128, 0.24);
+        width: 40px;
+        height: 40px;
+        border-radius: 50%;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        margin-top: -20px;
+        box-shadow: 0px 0px 7px rgba(128, 128, 128, 0.712);
+        z-index: 200;
+      }
+      .swap-rigth-icon{
+        right: 20px;
+        min-width: 30px;
+        position: absolute;
+
+
+        .nav-svg{
+          width: 35px;
+        }
+      }
+      .swap-left-icon{
+        position: absolute;
+        min-width: 30px;
+        .nav-svg{
+          width: 35px;
+        }
+      }
     }
   }
