--- a/src/utils/styles.scss
+++ b/src/utils/styles.scss
@@ -1,4 +1,5 @@
 $primary-color : #902bf5;
 $pc-max-width : 1024px;
-$background-color : #121212;
-$secondary-color : #1F1B24;
+$mobile-breakpoint: 768px;
+$background-color : black;
+$secondary-color : (0, 0, 0, 0.767);
