--- a/src/layouts/contact/Contact.scss
+++ b/src/layouts/contact/Contact.scss
@@ -56,12 +56,14 @@
         }
 
         .divider{
+            display: none;
             width: 2px;
             height: 200px;
             background-color: rgba(128, 128, 128, 0.336);
         }
 
         .form-section{
+            display: none;
             width: 60%;
              animation: slide-up 1s forwards;
             .form{
@@ -74,7 +76,7 @@
                     font-family: inherit;
                     font-size: 0.9em;
                     border-radius: 4px;
-                    border: 1px solid rgba(255, 255, 255, 0.61);
+                    border: none;
                     outline: none;
                     box-sizing: border-box;
                     color: black;
