--- a/src/layouts/about-me/AboutMe.scss
+++ b/src/layouts/about-me/AboutMe.scss
@@ -10,15 +10,15 @@
 
     .about-me-wrapper{
         display: flex;
+        align-items: center;
         width: 70%;
         margin: auto;
         gap: 40px;
         .avatar{
             animation: zoom-in 0.7s forwards;
             img{
-                width: 200px;
-                height: 200px;
-                border-radius: 50%;
+                width: 300px;
+                height: 250px;
                 object-fit: cover;
             }
         }
