--- a/src/layouts/experience/Experience.scss
+++ b/src/layouts/experience/Experience.scss
@@ -18,6 +18,7 @@
             border-radius: 7px;
             gap: 20px;
             animation: zoom-experience 0.4s forwards;
+            padding-bottom: 5px;
 
             .logo{
                 width: 80px;
